--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "react-scripts": "2.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build": "npm run build-css && react-scripts build",
+    "build-css": "node-sass-chokidar src/styles/scss -o src/styles/css",
+    "watch-css": "npm run build-css && node-sass-chokidar src/styles/scss -o src/styles/css --watch --recursive",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "compile:sass": "node-sass sass/main.scss src/App.css"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -25,6 +27,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "node-sass": "^4.9.4"
+    "node-sass": "^4.9.4",
+    "node-sass-chokidar": "^1.3.4",
+    "npm-run-all": "^4.1.3"
   }
 }
